append RabbitMQ